@@ -1,3 +1,9 @@
+2002-09-03  Borut Razem <borut.razem@siol.net>
+	* sdcc/src/SDCCglue.c, sdcc/src/SDCCglue.h, sdcc/src/SDCCmain.c,
+	sdcc/src/pic/glue.c:
+	introduced atexit() handler for teporay files removal in case of
+	errors, assertions, ...
+
 2002-08-29  Borut Razem <borut.razem@siol.net>
 	* sdcc/support/cpp2/auto-host_vc_in.h:
 	re-definition of O_BINARY and other O_XXX as _O_BINARY and _O_XXX, so the problem
@@ -11,7 +17,7 @@
 	ralloc.c(1442) : warning C4700: local variable 'clr' used without having been initialized
 
 2002-08-28  Bernhard Held <bernhard@bernhardheld.de>
-        * src/SDCCglue.c (printIvalArray): iterative calculation of array length
+	* src/SDCCglue.c (printIvalArray): iterative calculation of array length
 
 2002-08-28  Jesus Calvino-Fraga and Borut Razem <borut.razem@siol.net>
 	* sdcc/sdcc.dsw: added sdcpp, sdcppa, yacc, conf projects
